# dotmatch

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  codemeta.json  next.config.ts  package-lock.json  package.json  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: globals.css  layout.tsx  page.tsx
docs/: methods-and-citation.md  native-comparator-scope.md  packaging.md  release-process.md  schemas.md  scientific-claims.md  usability-comparison.md
include/: qdalign.h
scripts/: bench_barcode_demux.py  bench_bcl_demux.py  bench_competitors.py  bench_public_crispr_sample_scaling.py  bench_vs_edlib.py  check_barcode_comparison_gate.py  check_bcl_comparison_gate.py  check_bcl_competitors.sh  check_bcl_linux_env.sh  check_coverage_threshold.py  check_crispr_comparison_gate.py  check_native_comparator_scope.py  check_public_crispr_claim_gate.py  check_python_wheel.py  check_repository_ready.py  check_site_launch_surface.mjs  compare_count_tables.py  compare_crispr_comparison_counts.py  fetch_10x_tiny_bcl.py  fetch_edlib.py  fetch_mageck_demo.py  fetch_sanson_brunello_demo.py  fetch_srp009896_barcode_demo.py  generate_barcode_demux_report.py  generate_bcl_demux_report.py  generate_benchmark_report.py  generate_crispr_comparison_report.py  generate_native_benchmark_report.py  generate_public_crispr_report.py  generate_real_benchmark_report.py  install_barcode_competitors.sh  install_competitors.sh  (+8 more)
(+85 files in other folders)
