[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmatch"
version = "0.1.0"
description = "Fast exact short-DNA matching and barcode assignment"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Donncha O'Toole"}
]
keywords = [
    "bioinformatics",
    "computational-biology",
    "crispr",
    "barcode-demultiplexing",
    "edit-distance",
    "fastq",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/Dnncha/dotmatch"
Repository = "https://github.com/Dnncha/dotmatch"
Issues = "https://github.com/Dnncha/dotmatch/issues"
Documentation = "https://github.com/Dnncha/dotmatch#readme"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["dotmatch*", "quickdna*"]

[project.scripts]
dotmatch = "dotmatch.cli:main"
quickdna = "dotmatch.cli:main"
